# CS3210_AggressiveQueens

./: .gitignore  COPYING  autogen.sh  build.sh  configure.ac
m4/: ax_prog_cc_mpi.m4
src/: Makefile.am  board.c  board.h  findAQ.c  log.c  log.h  move.c  move.h  stack.c  stack.h
